[tool.poetry]
name = "gamebucks"
version = "0.1.0"
description = ""
authors = ["Rjt5412 <rajat.malviya5412@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = {extras = ["all"], version = "^0.104.1"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
